@@ -1,5 +1,5 @@
 /*
- * SlidingWindowIndexTest.java
+ * SlidingWindowIndexConcurrencyTest.java
  *
  * This source file is part of the FoundationDB open source project
  *
@@ -20,267 +20,162 @@
 
 package com.apple.foundationdb.record.provider.foundationdb.indexes;
 
-import com.apple.foundationdb.Transaction;
-import com.apple.foundationdb.async.AsyncUtil;
-import com.apple.foundationdb.record.EvaluationContext;
-import com.apple.foundationdb.record.IndexEntry;
-import com.apple.foundationdb.record.IndexScanType;
-import com.apple.foundationdb.record.IsolationLevel;
-import com.apple.foundationdb.record.RecordCursor;
 import com.apple.foundationdb.record.RecordMetaData;
 import com.apple.foundationdb.record.RecordMetaDataBuilder;
-import com.apple.foundationdb.record.RecordMetaDataProto;
-import com.apple.foundationdb.record.ScanProperties;
-import com.apple.foundationdb.record.TupleRange;
 import com.apple.foundationdb.record.metadata.Index;
-import com.apple.foundationdb.record.metadata.IndexAggregateFunction;
 import com.apple.foundationdb.record.metadata.IndexPredicate;
 import com.apple.foundationdb.record.metadata.IndexPredicate.RowNumberWindowPredicate.Direction;
-import com.apple.foundationdb.record.metadata.IndexRecordFunction;
 import com.apple.foundationdb.record.metadata.IndexTypes;
 import com.apple.foundationdb.record.metadata.Key;
-import com.apple.foundationdb.record.provider.foundationdb.FDBIndexableRecord;
-import com.apple.foundationdb.record.provider.foundationdb.FDBIndexedRawRecord;
-import com.apple.foundationdb.record.provider.foundationdb.FDBRecord;
 import com.apple.foundationdb.record.provider.foundationdb.FDBRecordContext;
 import com.apple.foundationdb.record.provider.foundationdb.FDBRecordStoreTestBase;
-import com.apple.foundationdb.record.provider.foundationdb.IndexMaintainer;
-import com.apple.foundationdb.record.provider.foundationdb.IndexMaintainerState;
-import com.apple.foundationdb.record.provider.foundationdb.IndexMaintenanceFilter;
-import com.apple.foundationdb.record.provider.foundationdb.IndexOperation;
-import com.apple.foundationdb.record.provider.foundationdb.IndexOperationResult;
-import com.apple.foundationdb.record.provider.foundationdb.IndexScanBounds;
-import com.apple.foundationdb.record.provider.foundationdb.IndexScanRange;
-import com.apple.foundationdb.record.provider.foundationdb.indexes.SlidingWindowTestHelpers.SlidingWindow;
-import com.apple.foundationdb.record.query.QueryToKeyMatcher;
 import com.apple.foundationdb.record.slidingwindowvector.TestRecordsSlidingWindowVectorProto;
 import com.apple.foundationdb.record.slidingwindowvector.TestRecordsSlidingWindowVectorProto.SlidingWindowVectorRecord;
-import com.apple.foundationdb.tuple.Tuple;
 import com.apple.test.RandomSeedSource;
 import com.apple.test.Tags;
-import com.google.common.collect.ImmutableList;
-import com.google.protobuf.Message;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 
 import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
-import java.util.List;
+import java.util.Map;
 import java.util.Random;
-import java.util.concurrent.CompletableFuture;
 
 import static com.apple.foundationdb.record.provider.foundationdb.indexes.SlidingWindowTestHelpers.SlidingWindowAssert.assertThat;
 import static com.apple.foundationdb.record.provider.foundationdb.indexes.SlidingWindowTestHelpers.concurrent;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
- * Tests for the sliding window index maintainer with a value-index delegate.
+ * Concurrency tests for the sliding window index maintainer with a value-index delegate.
  *
- * <p>Each test creates a value index decorated with a sliding window. The window key is
- * {@code relevance} (lower = more relevant for ASC, higher for DESC). The value index
- * key is {@code score}. Records are identified by {@code rec_no}.</p>
+ * <p>Every test wires a value index decorated with a sliding window. The window key is
+ * {@code relevance} (lower = more relevant for ASC, higher for DESC) and the index key
+ * is {@code score} (left as the proto default 0 — the delegate is enumerated by primary
+ * key tiebreak). Records are identified by {@code rec_no}.</p>
+ *
+ * <p>Each test exercises one corner of the maintainer's transactional contract:
+ * does a given concurrent shape of inserts produce a commit conflict on the
+ * sliding-window meta keys, and does the post-state match expectations?</p>
  */
 @Tag(Tags.RequiresFDB)
 class SlidingWindowIndexConcurrencyTest extends FDBRecordStoreTestBase {
 
     private static final String INDEX_NAME = "sw_value_index";
 
-    /**
-     * Opens a store with a sliding window value index. No grouping.
-     * Window key = relevance, index key = score.
-     */
+    /** Opens a store with a sliding-window value index ordered by {@code relevance}. */
     private void openStore(@Nonnull FDBRecordContext context, int windowSize,
                            @Nonnull Direction direction) throws Exception {
-        openStore(context, windowSize, direction, ImmutableList.of());
-    }
-
-    /**
-     * Opens a store with a (possibly grouped) sliding window value index.
-     */
-    private void openStore(@Nonnull FDBRecordContext context, int windowSize,
-                           @Nonnull Direction direction,
-                           @Nonnull List<List<String>> groupingFields) throws Exception {
-        RecordMetaDataBuilder metaDataBuilder = RecordMetaData.newBuilder()
+        final RecordMetaDataBuilder metaDataBuilder = RecordMetaData.newBuilder()
                 .setRecords(TestRecordsSlidingWindowVectorProto.getDescriptor());
         metaDataBuilder.getRecordType("SlidingWindowVectorRecord")
                 .setPrimaryKey(Key.Expressions.field("rec_no"));
-
-        final IndexPredicate.RowNumberWindowPredicate windowPredicate =
-                new IndexPredicate.RowNumberWindowPredicate(
-                        ImmutableList.of("relevance"), direction, windowSize, groupingFields);
-
-        // Build key expression: for grouped indexes, prefix with group columns
-        // e.g. one grouping column (zone) → concat(zone, score)
-        // e.g. two grouping columns (zone, category) → concat(zone, category, score)
-        final com.apple.foundationdb.record.metadata.expressions.KeyExpression keyExpr;
-        if (groupingFields.isEmpty()) {
-            keyExpr = Key.Expressions.field("score");
-        } else {
-            com.apple.foundationdb.record.metadata.expressions.KeyExpression expr =
-                    Key.Expressions.field(groupingFields.get(0).get(0));
-            for (int i = 1; i < groupingFields.size(); i++) {
-                expr = Key.Expressions.concat(expr, Key.Expressions.field(groupingFields.get(i).get(0)));
-            }
-            keyExpr = Key.Expressions.concat(expr, Key.Expressions.field("score"));
-        }
-
+        final IndexPredicate windowPredicate =
+                new IndexPredicate.RowNumberWindowPredicate("relevance", direction, windowSize);
         metaDataBuilder.addIndex("SlidingWindowVectorRecord",
-                new Index(INDEX_NAME, keyExpr, IndexTypes.VALUE,
-                        java.util.Collections.emptyMap(), windowPredicate));
-
+                new Index(INDEX_NAME, Key.Expressions.field("score"), IndexTypes.VALUE,
+                        Map.of(), windowPredicate));
         createOrOpenRecordStore(context, metaDataBuilder.getRecordMetaData());
     }
 
-    /**
-     * Inserts a record with the given fields. Score defaults to 0.
-     */
+    /** Saves a record with the given primary key and window key. */
     private void rec(long recNo, long relevance) {
-        rec(recNo, "z", "c", relevance, 0);
-    }
-
-    private void rec(long recNo, String zone, String category, long relevance, long score) {
         recordStore.saveRecord(SlidingWindowVectorRecord.newBuilder()
                 .setRecNo(recNo)
-                .setZone(zone)
-                .setCategory(category)
                 .setRelevance(relevance)
-                .setScore(score)
                 .build());
     }
 
-    private void deleteRec(long recNo) {
-        recordStore.deleteRecord(Tuple.from(recNo));
+    /**
+     * Opens a fresh transaction, seeds records 1..N with the given relevances, asserts
+     * the window contains all of them, and commits. The post-seed boundary is the
+     * lowest-sorting entry under {@code direction} — i.e. {@code (relevances[0], 1)}
+     * for DESC if the inputs are presented in increasing order.
+     */
+    private void seedWindow(int windowSize, @Nonnull Direction direction,
+                            long... relevances) throws Exception {
+        try (FDBRecordContext context = openContext()) {
+            openStore(context, windowSize, direction);
+            final long[] expectedRecNos = new long[relevances.length];
+            for (int i = 0; i < relevances.length; i++) {
+                final long recNo = i + 1;
+                rec(recNo, relevances[i]);
+                expectedRecNos[i] = recNo;
+            }
+            assertThat(SlidingWindowTestHelpers.slidingWindowViaValueIndex(recordStore, INDEX_NAME))
+                    .hasSizeOf(relevances.length)
+                    .underlyingValueIndex()
+                    .containsInAnyOrder(expectedRecNos);
+            commit(context);
+        }
     }
 
     /**
-     * Probe: snapshot of the sliding-window state for the ungrouped index.
+     * Opens a fresh transaction and asserts that the delegate index contains exactly
+     * {@code expectedRecNos} (in any order) and the window count matches.
      */
-    @Nonnull
-    private SlidingWindow slidingWindow() {
-        return SlidingWindowTestHelpers.slidingWindowViaValueIndex(recordStore, INDEX_NAME);
-    }
-
-    /**
-     * Probe: snapshot of the sliding-window state for the given group.
-     */
-    @Nonnull
-    private SlidingWindow groupedSlidingWindow(@Nullable final Tuple groupingKey) {
-        return SlidingWindowTestHelpers.groupedSlidingWindowViaValueIndex(recordStore, INDEX_NAME, groupingKey);
+    private void assertFinalWindow(int windowSize, @Nonnull Direction direction,
+                                   long... expectedRecNos) throws Exception {
+        try (FDBRecordContext context = openContext()) {
+            openStore(context, windowSize, direction);
+            assertThat(SlidingWindowTestHelpers.slidingWindowViaValueIndex(recordStore, INDEX_NAME))
+                    .hasSizeOf(expectedRecNos.length)
+                    .underlyingValueIndex()
+                    .containsInAnyOrder(expectedRecNos);
+            commit(context);
+        }
     }
 
     @ParameterizedTest
     @RandomSeedSource({0x0fdbL, 0x5ca1eL})
-    void descConcurrentInsertsBelowWindowSizeDoNotConflict(long seed) throws Exception {
-        // Seed the window with three records (window size 5, so it stays under-full).
-        try (FDBRecordContext context = openContext()) {
-            openStore(context, 5, Direction.DESC);
-            rec(1, 100);
-            rec(2, 200);
-            rec(3, 300);
-            assertThat(slidingWindow())
-                    .hasSizeOf(3)
-                    .underlyingValueIndex()
-                    .containsInAnyOrder(1L, 2L, 3L);
-            commit(context);
-        }
+    void descBetterInsertsIntoNonFullWindowDoNotConflict(long seed) throws Exception {
+        // Window has spare capacity (3 of 5). Both new relevances (400, 500) are
+        // better than the seeded boundary (100, 1) for DESC, so neither rewrites
+        // the boundary key — the maintainer just ADD-1s the counter (atomic) and
+        // appends to the entries subspace at distinct keys. With no shared
+        // read-conflict range, both commits succeed in any order; the seeded
+        // shuffle exercises that.
+        seedWindow(5, Direction.DESC, 100, 200, 300);
 
-        // Two concurrent transactions each insert a distinct record into the still-not-full
-        // window. Because the maintainer bumps the count with an atomic ADD mutation and reads
-        // the count/boundary through tr.snapshot() (and neither new key is worse than the seeded
-        // boundary of (100, 1), so neither rewrites the boundary), the two transactions touch no
-        // shared read-conflict key. Both commits must therefore succeed in any order without a
-        // conflict.
         concurrent(this, ctx -> openStore(ctx, 5, Direction.DESC))
                 .tx("A", () -> rec(4, 400))
                 .tx("B", () -> rec(5, 500))
                 .commitInAnyOrder(new Random(seed))
                 .expectNoConflicts();
 
-        // Both records landed in the window and the count reflects all five.
-        try (FDBRecordContext context = openContext()) {
-            openStore(context, 5, Direction.DESC);
-            assertThat(slidingWindow())
-                    .hasSizeOf(5)
-                    .underlyingValueIndex()
-                    .containsInAnyOrder(1L, 2L, 3L, 4L, 5L);
-            commit(context);
-        }
+        assertFinalWindow(5, Direction.DESC, 1L, 2L, 3L, 4L, 5L);
     }
 
     @Test
-    void descConcurrentInsertsAboveWindowSizeConflict() throws Exception {
-        // Seed the window with three records (window size 5, so it stays under-full).
-        try (FDBRecordContext context = openContext()) {
-            openStore(context, 5, Direction.DESC);
-            rec(1, 100);
-            rec(2, 200);
-            rec(3, 300);
-            assertThat(slidingWindow())
-                    .hasSizeOf(3)
-                    .underlyingValueIndex()
-                    .containsInAnyOrder(1L, 2L, 3L);
-            commit(context);
-        }
+    void descWorseInsertsIntoNonFullWindowConflictOnBoundary() throws Exception {
+        // Window has spare capacity (3 of 5), but A=(50, 4) and B=(75, 5) are both
+        // worse than the seeded boundary (100, 1) for DESC, so each tx rewrites
+        // the boundary. The maintainer pairs that tr.set(boundaryMetaKey, ...)
+        // with an explicit tr.addReadConflictKey(boundaryMetaKey), turning the
+        // boundary update into a proper read-modify-write. The two transactions
+        // therefore share a read-conflict range on the boundary key and only
+        // one can commit: A wins (declared order), B fails.
+        seedWindow(5, Direction.DESC, 100, 200, 300);
 
-        // Two concurrent transactions each insert a record that is WORSE than the
-        // seeded boundary (100, 1) for DESC: A=(50, 4) and B=(75, 5). Both go through
-        // the not-full branch (count=3 < 5), but because each new entry replaces the
-        // boundary, the maintainer pairs its tr.set(boundaryMetaKey, ...) with an
-        // explicit tr.addReadConflictKey(boundaryMetaKey) — turning the boundary
-        // update into a proper read-modify-write under FDB's optimistic concurrency.
-        // The two transactions therefore share a read-conflict range on the boundary
-        // key and cannot both commit: A wins (declared order), B fails. Final window
-        // contains rec 4 (from A) but not rec 5.
         concurrent(this, ctx -> openStore(ctx, 5, Direction.DESC))
                 .tx("A", () -> rec(4, 50))
                 .tx("B", () -> rec(5, 75))
                 .commitAll()
-                .expectConflictOn("B");
+                .expectConflictOn("B")
+                .expectCommitted("A");
 
-        // Only rec 4 (from A) made it in; B was rolled back on conflict.
-        try (FDBRecordContext context = openContext()) {
-            openStore(context, 5, Direction.DESC);
-            assertThat(slidingWindow())
-                    .hasSizeOf(4)
-                    .underlyingValueIndex()
-                    .containsInAnyOrder(1L, 2L, 3L, 4L);
-            commit(context);
-        }
+        assertFinalWindow(5, Direction.DESC, 1L, 2L, 3L, 4L);
     }
 
     @ParameterizedTest
     @RandomSeedSource({0x0fdbL, 0x5ca1eL})
-    void concurrentInsertsOutsideBoundariesOfFullWindowDoNotConflict(long seed) throws Exception {
-        // Fill the window to capacity (size=5) with relevances 100..500.
-        // For DESC the boundary is the worst entry: (100, 1).
-        try (FDBRecordContext context = openContext()) {
-            openStore(context, 5, Direction.DESC);
-            rec(1, 100);
-            rec(2, 200);
-            rec(3, 300);
-            rec(4, 400);
-            rec(5, 500);
-            assertThat(slidingWindow())
-                    .hasSizeOf(5)
-                    .underlyingValueIndex()
-                    .containsInAnyOrder(1L, 2L, 3L, 4L, 5L);
-            commit(context);
-        }
+    void descOverflowInsertsIntoFullWindowDoNotConflict(long seed) throws Exception {
+        // Window is full (5 of 5). Every new relevance is below the seeded
+        // boundary (100, 1) for DESC, so each tx takes the full-branch overflow
+        // short-circuit: no delegate touch, no read-conflict on boundaryMetaKey,
+        // no boundary rewrite. Each tx only appends its entry to the entries
+        // subspace at a disjoint key — no two transactions share a read-conflict
+        // range and all six commit in any order.
+        seedWindow(5, Direction.DESC, 100, 200, 300, 400, 500);
 
-        // Six concurrent transactions each insert a record that is WORSE than the
-        // boundary (100, 1) for DESC — i.e. each new entry belongs in overflow,
-        // outside the window. The window is full (count=5=size), so every tx takes
-        // the full branch, snapshot-reads the boundary, finds isBetter(entry,
-        // boundary) is false, and short-circuits: no delegate.update, no
-        // tr.addReadConflictKey(boundaryMetaKey), no boundary rewrite. Each tx
-        // only writes its own entry into the entries subspace at a disjoint key,
-        // so the six transactions share no read-conflict range and all commit
-        // cleanly regardless of order — the seeded shuffle exercises that.
         concurrent(this, ctx -> openStore(ctx, 5, Direction.DESC))
                 .tx("A", () -> rec(6, 70))
                 .tx("B", () -> rec(7, 80))
@@ -291,50 +186,25 @@ class SlidingWindowIndexConcurrencyTest extends FDBRecordStoreTestBase {
                 .commitInAnyOrder(new Random(seed))
                 .expectNoConflicts();
 
-        // The delegate is untouched — the six new records all live in overflow,
-        // and the window still holds the original five.
-        try (FDBRecordContext context = openContext()) {
-            openStore(context, 5, Direction.DESC);
-            assertThat(slidingWindow())
-                    .hasSizeOf(5)
-                    .underlyingValueIndex()
-                    .containsInAnyOrder(1L, 2L, 3L, 4L, 5L);
-            commit(context);
-        }
+        // The delegate is untouched — the six new records all live in overflow.
+        assertFinalWindow(5, Direction.DESC, 1L, 2L, 3L, 4L, 5L);
     }
 
     @ParameterizedTest
     @RandomSeedSource({0x0fdbL, 0x5ca1eL})
-    void concurrentInsertsOutsideBoundariesOfFullWindowDoNotConflictWithSingleMaintainingTx(long seed) throws Exception {
-        // Fill the window to capacity (size=5) with relevances 100..500.
-        // For DESC the boundary is the worst entry: (100, 1).
-        try (FDBRecordContext context = openContext()) {
-            openStore(context, 5, Direction.DESC);
-            rec(1, 100);
-            rec(2, 200);
-            rec(3, 300);
-            rec(4, 400);
-            rec(5, 500);
-            assertThat(slidingWindow())
-                    .hasSizeOf(5)
-                    .underlyingValueIndex()
-                    .containsInAnyOrder(1L, 2L, 3L, 4L, 5L);
-            commit(context);
-        }
+    void descOneEvictionAlongsideOverflowInsertsIntoFullWindowDoNotConflict(long seed) throws Exception {
+        // Window is full. Five txns insert below the boundary (100, 1) and short-
+        // circuit out of the full branch — no delegate touch, no read-conflict on
+        // boundaryMetaKey. The sixth (E, relevance 430) is better than the
+        // boundary, so it goes through evictBoundaryAndReplace: it removes rec 1
+        // from the delegate, takes a read-conflict on boundaryMetaKey, and picks
+        // the new boundary by scanning entries via keyAfter((100, 1))→end. That
+        // scan only covers the original better-than-boundary entries (200..500)
+        // — disjoint from the overflow keys the others append below 100. So E's
+        // read set never overlaps anyone's write set; all six commit in any
+        // order.
+        seedWindow(5, Direction.DESC, 100, 200, 300, 400, 500);
 
-        // Six concurrent transactions, but exactly one (E) actually maintains the
-        // window: rec(10, 430) is BETTER than the boundary (100, 1) for DESC, so
-        // E evicts rec 1 from the delegate and reseats the boundary. The other
-        // five carry overflow-only inserts (relevance < 100) and short-circuit
-        // out of the maintainer — no delegate touch, no boundaryMetaKey
-        // read-conflict, no boundary rewrite.
-        //
-        // E does take a read-conflict on boundaryMetaKey and scans the entries
-        // subspace via keyAfter((100, 1))→end to pick the new boundary, but that
-        // range only covers the original better-than-boundary entries (200..500)
-        // — not the overflow keys the other txns are appending below 100. So
-        // E's read set is disjoint from every other tx's write set, and all six
-        // commit cleanly in any order; the seeded shuffle exercises that.
         concurrent(this, ctx -> openStore(ctx, 5, Direction.DESC))
                 .tx("A", () -> rec(6, 70))
                 .tx("B", () -> rec(7, 80))
@@ -345,45 +215,23 @@ class SlidingWindowIndexConcurrencyTest extends FDBRecordStoreTestBase {
                 .commitInAnyOrder(new Random(seed))
                 .expectNoConflicts();
 
-        // The delegate is untouched — the six new records all live in overflow,
-        // and the window still holds the original five.
-        try (FDBRecordContext context = openContext()) {
-            openStore(context, 5, Direction.DESC);
-            assertThat(slidingWindow())
-                    .hasSizeOf(5)
-                    .underlyingValueIndex()
-                    .containsInAnyOrder(2L, 3L, 4L, 5L, 10L);
-            commit(context);
-        }
+        // E's eviction landed: rec 1 (the previous boundary) is out, rec 10 is
+        // in, the boundary advanced to (200, 2). The five overflow records
+        // (rec 6, 7, 8, 9, 11) live in the entries subspace but not the delegate.
+        assertFinalWindow(5, Direction.DESC, 2L, 3L, 4L, 5L, 10L);
     }
 
     @Test
-    void concurrentInsertionsWithinBoundariesOfFullWindowConflict() throws Exception {
-        // Fill the window to capacity (size=5) with relevances 100..500.
-        // For DESC the boundary is the worst entry: (100, 1).
-        try (FDBRecordContext context = openContext()) {
-            openStore(context, 5, Direction.DESC);
-            rec(1, 100);
-            rec(2, 200);
-            rec(3, 300);
-            rec(4, 400);
-            rec(5, 500);
-            assertThat(slidingWindow())
-                    .hasSizeOf(5)
-                    .underlyingValueIndex()
-                    .containsInAnyOrder(1L, 2L, 3L, 4L, 5L);
-            commit(context);
-        }
+    void descCompetingEvictionsIntoFullWindowConflict() throws Exception {
+        // Window is full. Both A=(6, 5000) and B=(7, 8000) are better than the
+        // boundary (100, 1) for DESC, so both take the eviction path. Each calls
+        // evictBoundaryAndReplace, which adds a read-conflict on boundaryMetaKey
+        // and rewrites it. With both A and B reading AND writing the same
+        // boundaryMetaKey, FDB's optimistic concurrency forces one to lose: A
+        // commits first (declared order), so B's read overlaps A's write and B
+        // fails.
+        seedWindow(5, Direction.DESC, 100, 200, 300, 400, 500);
 
-        // Two concurrent transactions both insert into a FULL window with values
-        // strictly BETTER than the boundary (100, 1) for DESC: A=(6, 5000),
-        // B=(7, 8000). Both take the eviction path — each snapshot-reads the
-        // boundary, finds isBetter(entry, boundary)=true, and calls
-        // evictBoundaryAndReplace, which pairs a tr.addReadConflictKey on
-        // boundaryMetaKey with a tr.set rewriting it. With both A and B reading
-        // AND writing the same boundaryMetaKey, FDB's optimistic concurrency
-        // forces one to lose: A commits first (declared order), so B's read
-        // overlaps A's write and B fails.
         concurrent(this, ctx -> openStore(ctx, 5, Direction.DESC))
                 .tx("A", () -> rec(6, 5000))
                 .tx("B", () -> rec(7, 8000))
@@ -391,16 +239,9 @@ class SlidingWindowIndexConcurrencyTest extends FDBRecordStoreTestBase {
                 .expectConflictOn("B")
                 .expectCommitted("A");
 
-        // A's eviction landed: rec 1 (the previous boundary) is out, rec 6 is in,
-        // and the boundary has advanced to (200, 2). B was rolled back, so rec 7
-        // never made it to the delegate.
-        try (FDBRecordContext context = openContext()) {
-            openStore(context, 5, Direction.DESC);
-            assertThat(slidingWindow())
-                    .hasSizeOf(5)
-                    .underlyingValueIndex()
-                    .containsInAnyOrder(2L, 3L, 4L, 5L, 6L);
-            commit(context);
-        }
+        // A's eviction landed: rec 1 (the previous boundary) is out, rec 6 is
+        // in, the boundary advanced to (200, 2). B was rolled back, so rec 7
+        // never reached the delegate.
+        assertFinalWindow(5, Direction.DESC, 2L, 3L, 4L, 5L, 6L);
     }
 }
